syntax = "proto3";

package farewell;

option go_package = "/proto/gen/farewell;farewellpb";


message GoodByeRequest {
    string name = 1;
}

message GoodByeResponse {
    string message = 2;
}