syntax = "proto3";

package main;

option go_package = "/proto;mainwithservicepb";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string name = 1;
    int64 age = 2;
}

message HelloResponse {
    string conf_message = 1;
    repeated string data = 2;
}

message Address {
    string address = 1;
}

message UserProfile {
    string username = 1;
    string email = 2;
}